[package]
name = "greenhorn_deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.2.0", features = ["trace"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }